# tripleprov_demo

./: CMakeLists.txt  ProvQuery  ProvQuery2  README.md  query01  query02  query03  query04
dataset/: 0000_4queries_PROV.nt  0000_4queries_PROV01.nt  0000_4queries_PROV03.nt
src/: API.cpp  API.h  BTCprov.cpp  BTCprov.h  Client.cpp  Client.h  Conductor.cpp  Conductor.h  ConductorNode.cpp  ConductorNode.h  DBPnetwork.cpp  DBPnetwork.h  Functions.cpp  KeyManager.cpp  KeyManager.h  LUBM.cpp  LUBM.h  LUBMnetwork.cpp  LUBMnetwork.h  MoleculeTemplatesBB.conf  MoleculeTemplatesLUBM.conf  MoleculeTemplatesLUBM2.conf  Molecules.cpp  Molecules.h  PageManager.cpp  PageManager.h  Partitioner.cpp  Partitioner.h  Server.cpp  Server.h  TemplateManager.cpp  TemplateManager.h  TypesHierarchy.cpp  TypesHierarchy.h  TypesManager.cpp  TypesManager.h  WDCqueries.cpp  WDCqueries.h  diplodocus.cpp  diplodocus.h
